--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -19,8 +19,8 @@
     "eslint-config-next": "13.4.7",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.9",
-    "next": "13.4.9",
-    "next-auth": "^4.22.1",
+    "next": "^14.1.4",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.24",
     "query-string": "^8.2.0",
     "react": "18.2.0",
